Added Dynamic navigation, pages
Pages added : contact, about, faq,\n Components: Two column Layout Banner, etc

--- a/components/Home/Banner/Banner.module.scss
+++ b/components/Home/Banner/Banner.module.scss
@@ -5,8 +5,8 @@
     &:before{
         content: "";
         position: absolute;
-        background-color: #0061f2 !important;
-        opacity: 0.7;
+        background-color: #6f42c1 !important;
+        opacity: 0.5;
         top: 0;
         right: 0;
         left: 0;
